--- a/public/style2.css
+++ b/public/style2.css
@@ -61,7 +61,7 @@ button {
     padding: 20px;
     margin: 10px;
     color: #ffffff;
-    background-color: #28a745;
+    background-color: #4e53b1;
     border-radius: 10px;
 }
 #posts {
